# fileSearcher

./: .gitignore  Cargo.toml  README.md  source.7z
src/: app_message.rs  app_state.rs  config.rs  index.rs  main.rs  search.rs
src/gui/: context_view.rs  mod.rs  settings_view.rs
src/message/: mod.rs
src/search/: engine.rs  indexer.rs  mod.rs  query.rs
src/utils/: file_utils.rs
src/windows/: context_view.rs  mod.rs
tantivy_index/: .managed.json  meta.json
